MOB-642 : Refresh & guard delay

--- a/src/app/ticket-info/container/ticket-info-container-tmpl.html
+++ b/src/app/ticket-info/container/ticket-info-container-tmpl.html
@@ -38,7 +38,7 @@
       <app-ticket #ticketNumberComponent [isTicketEndedOrDeleted]="isTicketEndedOrDeleted" [isAfterCalled]="isAfterCalled"></app-ticket>
     </div>
     <div [hidden]="isVisitCall && !isVisitRecycled || redirectUrlLoading" [ngClass]="{'button-container-rtl' : isRtl, 'button-container' : true, 'expand-view-btn': isTicketEndedOrDeleted}">
-      <app-visit-cancel #cancelVisitComponent [isUrlAccessedTicket]='isUrlAccessedTicket' [isTicketEndedOrDeleted]="isTicketEndedOrDeleted"></app-visit-cancel>
+      <app-visit-cancel #cancelVisitComponent [isDelayFuncAvailable]="isDelayFuncAvailable" [isUrlAccessedTicket]='isUrlAccessedTicket' [isTicketEndedOrDeleted]="isTicketEndedOrDeleted"></app-visit-cancel>
     </div>
     <div [hidden]="!isVisitCall || !isMeetingAvailable" [ngClass]="{'button-container-rtl' : isRtl, 'button-container' : true, 'expand-view-btn': isTicketEndedOrDeleted}">
       <app-visit-cancel #cancelVisitComponent [isUrlAccessedTicket]='isUrlAccessedTicket' [isTicketEndedOrDeleted]="isTicketEndedOrDeleted" [isVisitCall]="isVisitCall"></app-visit-cancel>
