--- a/src/app/ticket-info/queue/queue.component.html
+++ b/src/app/ticket-info/queue/queue.component.html
@@ -20,6 +20,10 @@
     </div>
     <div *ngIf="visitRecycleMsg"  class="center-text recycle-heading custom text-color" [ngClass]="{'queue-body-rtl' : isRtl}">{{ visitRecycleMsg }}</div>
   </div>
+  <div *ngIf="!showQueue || (appointmentTime && showAppTime)" style="font-family: 'Roboto-Regular';" [ngClass]="{'queue-body-rtl' : isRtl, 'queue-heading-alignment' : true, 'queue-heading' : true,
+    'custom' : true, 'text-color' : true}" [hidden]="!showNetWorkError">
+      <app-network-message></app-network-message>
+ </div>
 </div>
   <div [innerHTML]="'ticketInfo.ticketEndHeading' | translate" id="ticketEndHeading" *ngIf="isTicketEndedOrDeleted" class="center-text sub-heading-text-2 custom text-color queue-end"></div>
   <div [innerHTML]="'ticketInfo.welcomeback' | translate" id ="welcomeback" *ngIf="isTicketEndedOrDeleted" class="center-text sub-heading-text-2 custom text-color"></div>
