--- a/src/styles.css
+++ b/src/styles.css
@@ -78,7 +78,8 @@ div.row {
 .accent-btn {
   width: 250px;
   margin: 0 auto;
-  line-height: 2.5em;
+  line-height: 1.25em;
+  padding: 15px;
   background: rgba(157, 0, 58, 0.58);
   border-radius: 250px;
   color: #FFFFFF;
