MOB-704: Direct link to branch without locationservices shows different error

--- a/src/app/branch/branch-notfound/branch-notfound.component.css
+++ b/src/app/branch/branch-notfound/branch-notfound.component.css
@@ -1,7 +1,7 @@
 /* unvisited link */
 
 #link-to-reload {
-  color: white !important;
+  color: white;
   text-decoration: underline;
   cursor: pointer;
 }
