--- a/src/app/branch/branch-notfound/branch-notfound.component.html
+++ b/src/app/branch/branch-notfound/branch-notfound.component.html
@@ -2,7 +2,7 @@
   <div class="col-xs-1 col-xxs"></div>
   <div class="col-xs-10 col-xxs">
     <div class="center-text sub-heading-text-3 custom text-color">
-      {{ (branchId ? (isLocationPermission ? 'visit.notInRange' : 'visit.positionPermission') : 'branch.notFound') | translate }} <a id="link-to-reload" (click)='reloadData()'>{{ 'branch.clickHere' | translate }} </a> {{ 'branch.loadBranches' | translate }}
+      {{ (branchId ? (isLocationPermission ? 'visit.notInRange' : 'visit.positionPermission') : 'branch.notFound') | translate }} <a id="link-to-reload" class="custom link-text-color" (click)='reloadData()'>{{ 'branch.clickHere' | translate }} </a> &nbsp; {{ 'branch.loadBranches' | translate }}
      </div>
   </div>
   <div class="col-xs-1 col-xxs"></div>
