--- a/src/app/ticket-info/queue/queue.component.html
+++ b/src/app/ticket-info/queue/queue.component.html
@@ -20,9 +20,9 @@
     </div>
     <div *ngIf="visitRecycleMsg"  class="center-text recycle-heading custom text-color" [ngClass]="{'queue-body-rtl' : isRtl}">{{ visitRecycleMsg }}</div>
   </div>
-  <div *ngIf="showDelay && expireTime && expireTime.length > 0" class="queue-app">
-    <span class="queue-app-heading">{{ 'ticketInfo.delayHeading' | translate }}</span>
-    <span class="queue-app-time">{{ expireTime }} </span> 
+  <div class="queue-app">
+    <span class="queue-app-heading custom text-color">{{ 'ticketInfo.delayHeading' | translate }}</span>
+    <span class="queue-app-time custom text-color">{{ expireTime }} </span>
   </div>
 </div>
   <div [innerHTML]="'ticketInfo.ticketEndHeading' | translate" id="ticketEndHeading" *ngIf="isTicketEndedOrDeleted" class="center-text sub-heading-text-2 custom text-color queue-end"></div>
