--- a/src/app/otp/otp-phone-number/otp-phone-number.component.html
+++ b/src/app/otp/otp-phone-number/otp-phone-number.component.html
@@ -7,7 +7,7 @@
   
   <div class="custom-phone-card" id="customer-data-container">
     <!-- INITIAL AND EDIT PHONE SECTION -->
-    <div class="phone-num-text"> {{'customer_info.phoneNumber' | translate}} </div>
+    <div class="phone-num-text custom text-color"> {{'customer_info.phoneNumber' | translate}} </div>
     <div class="customer-phone__number-container">
       <div class="phone-num">
         <div class="phone-container-icon">
