--- a/src/app/otp/otp-pin/otp-pin.component.html
+++ b/src/app/otp/otp-pin/otp-pin.component.html
@@ -7,7 +7,7 @@
   <div class="custom-phone-card" >
     <!-- INITIAL AND EDIT PHONE SECTION -->
     <div class="otp-heading">
-      <div class="phone-num-text"> {{'otp.pinHeading' | translate}} </div>
+      <div class="phone-num-text custom text-color"> {{'otp.pinHeading' | translate}} </div>
       <div class="custom otp-timer-color otp-timer" [ngClass]="(direction === 'rtl') ? 'otp-timer-rtl': 'otp-timer-ltr'" *ngIf="showTimer">
         <span id="minute"></span>
         <span id="seperator"></span>
