MOB-706: fixes bug

--- a/src/app/ticket-info/queue/queue.component.html
+++ b/src/app/ticket-info/queue/queue.component.html
@@ -20,7 +20,7 @@
     </div>
     <div *ngIf="visitRecycleMsg"  class="center-text recycle-heading custom text-color" [ngClass]="{'queue-body-rtl' : isRtl}">{{ visitRecycleMsg }}</div>
   </div>
-  <div class="queue-app">
+  <div *ngIf="showDelay && expireTime && expireTime.length > 0" class="queue-app">
     <span class="queue-app-heading custom text-color">{{ 'ticketInfo.delayHeading' | translate }}</span>
     <span class="queue-app-time custom text-color">{{ expireTime }} </span>
   </div>
