--- a/src/app/service/list-container/services-container-tmpl.html
+++ b/src/app/service/list-container/services-container-tmpl.html
@@ -37,7 +37,7 @@
         <div class="accent-btn custom accent-bg-color btn-text-color" (click)='onTakeTicket()'>
           {{ (getDelayVisitAvailability() ? 'service.accentBtnDleayText' : 'service.accentBtnText') | translate }}
         </div>
-        <div *ngIf="getDelayVisitAvailability()" class="accent-btn custom accent-bg-color btn-text-color btn-margin-extend" style="font-size: 1.6em; line-height: 3em;" (click)='onDelayTicket()'>
+        <div *ngIf="getDelayVisitAvailability()" class="accent-btn custom accent-bg-color btn-text-color btn-margin-extend" (click)='onDelayTicket()'>
           {{ 'service.delayVisitBtnText' | translate }}
         </div>
       </div>
