--- a/src/app/theme/theme-styles.css
+++ b/src/app/theme/theme-styles.css
@@ -50,6 +50,17 @@
   color: #03996c !important;
 }
 
+/* Edit to change group button text color */
+.custom.group-btn-text-color {
+  color: #000000 !important;
+  fill: #000000 !important;
+}
+
+/* Edit to change group button color */
+.custom.group-btn-color {
+  background-color: #C1C1C1 !important;
+}
+
 /* Edit to change OTP timer color */
 .custom.otp-timer-color {
   color: #d4152b !important;
