MOB-730 : Mobile Ticket - Service Grouping

--- a/src/app/service/group-item/group-item.css
+++ b/src/app/service/group-item/group-item.css
@@ -57,6 +57,26 @@
   width: 100%;
 }
 
+.button-drop {
+  min-width: 22px;
+  margin-right: -12%;
+}
+
+.button-drop-rtl {
+  min-width: 22px;
+  margin-left: -12%;
+}
+
+.long-and-truncated-with-child-corrected {
+  min-width: 0;
+}
+
+.long-and-truncated-with-child-corrected span {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
 div.btn-text {
   font-size: 17px;
   font-weight: 400;
