--- a/src/app/service/list-item/service-tmpl.html
+++ b/src/app/service/list-item/service-tmpl.html
@@ -36,7 +36,7 @@
 
         ({{customersWaiting}}
 
-        <svg class="customer-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 39.93 37"><title>WaitingIcon</title>
+        <svg class="customer-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 39.93 37"><title></title>
           <g id="Layer_2" data-name="Layer 2">
             <g id="Assets">
               <polygon points="15.7 28.96 15.59 34.61 15.59 34.62 15.7 28.96"/>
