--- a/src/app/service/group-item/group-item.css
+++ b/src/app/service/group-item/group-item.css
@@ -69,12 +69,17 @@
 
 .long-and-truncated-with-child-corrected {
   min-width: 0;
+  width: 100%;
 }
 
 .long-and-truncated-with-child-corrected span {
-  white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
+  display: -webkit-box;
+  line-height: 1.5em;
+  max-height: 3em;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
 }
 
 div.btn-text {
